--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "aws-amplify": "^1.2.4",
     "bootstrap": "^4.3.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.1.3",
