--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.3.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "next": "^9.1.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-infinite-scroller": "^1.2.4",
+    "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1",
+    "startbootstrap-shop-homepage": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
